django_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-k8s-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      project: django-web-app
  template:
    metadata:
      labels:
        project: django-web-app
    spec:
      containers:
      - name: django
        image: weffy/django_app:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django
spec:
  type: NodePort
  selector:
    project: django-web-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
