ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: star-burger.test
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: django-service
              port:
                number: 80
